<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black2"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/TVDialogTitle"
        android:text="@string/dialogTitle"
        android:fontFamily="serif"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/grayfont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/TVDialogMessage"
        android:text="@string/dialogMessage"
        android:fontFamily="serif"
        android:textSize="13sp"
        android:gravity="center"
        android:textColor="@color/grayfont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/BTNDialogYes"
            android:text="@string/yes"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/BTNDialogNo"
            android:text="@string/no"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>



</LinearLayout>