<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/addNote"
        android:textColor="@color/titles"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/noteTitle"
        android:textColor="@color/grayfont" />

    <EditText
        android:id="@+id/EDTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:textColor="@color/grayfont" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/content"
        android:textColor="@color/grayfont" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/RLOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#222364">

            <Button
                android:id="@+id/BTNCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Camera" />
        </RelativeLayout>

        <Button
            android:id="@+id/BTNSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/titles"
            android:fontFamily="serif"
            android:text="@string/save" />

        <EditText
            android:id="@+id/EDContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/BTNSave"
            android:layout_below="@id/RLOptions"
            android:fontFamily="serif"
            android:gravity="start"
            android:textAlignment="textStart"
            android:textColor="@color/grayfont" />
    </RelativeLayout>


</LinearLayout>