<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/details"
        android:textColor="@color/titles"
        android:textSize="20sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">


        <Button
            android:id="@+id/BTNEdit"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/edit"
            android:fontFamily="serif" />

        <TextView
            android:id="@+id/TVDetailsEditNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/BTNEdit"
            android:layout_toStartOf="@id/BTNEdit"
            android:fontFamily="serif"
            android:text="@string/editNote"
            android:textColor="@color/grayfont" />

        <TextView
            android:id="@+id/TVEditTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/TVDetailsEditNote"
            android:layout_toStartOf="@id/TVDetailsEditNote"
            android:fontFamily="serif"
            android:textColor="@color/grayfont"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.4dp"
        android:background="@color/titles"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/TVDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/dateText"
            android:textColor="@color/titles" />

        <TextView
            android:id="@+id/TVEditDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/TVDateText"
            android:layout_toRightOf="@id/TVDateText"
            android:fontFamily="serif"
            android:textColor="@color/grayfont" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TVEditContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:textColor="@color/grayfont" />


        </RelativeLayout>
    </ScrollView>


</LinearLayout>